--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -212,7 +212,7 @@ font-size: 20px!important;
           <h1 class="display-4">Portfolio</h1>
           <hr class="my-4">
 
-          <a href="WordGuess/index.html" class="card-block clearfix">
+          <a href="cmiller8421.github.io/portfolio/wordguess" class="card-block clearfix"></a>
           <div class="row">
               <div class="col-sm-6">       
                 <div class="card" style="width:250px">
