--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -159,13 +159,13 @@ font-size: 20px!important;
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="bootindex.html">About <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="bootportfolio.html">Portfolio</a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="bootcontact.html">Contact</a>
+        <a class="nav-link" href="contact.html">Contact</a>
       </li>
       
     </ul>
