--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -25,6 +25,7 @@
         border: 1px solid lightgray;
         margin:auto;
         padding-top:10px;
+        float: left;
   }
 
   .card-img-top{
@@ -236,7 +237,7 @@ font-size: 20px!important;
             </a>
       </div>
 
-<!--
+
       <a href="bootindex.html" class="card-block clearfix">
           <div class="row">
               <div class="col-sm-6">       
