--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -238,7 +238,7 @@ font-size: 20px!important;
       </div>
 
 
-      <a href="bootindex.html" class="card-block clearfix">
+      <a href="https://cmiller8421.github.io/portfolio/trivia%20game/" class="card-block clearfix">
           <div class="row">
               <div class="col-sm-6">       
                 <div class="card" style="width:250px">
