--- a/corey-bay/corey-bay.html
+++ b/corey-bay/corey-bay.html
@@ -45,7 +45,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-sm-4 col-sm-offset-2">
-                  <img class="img-fluid thumbnail center-block" src="https://www.thestar.com.my/~/media/online/2015/09/30/21/21/metd_prkenny_0110_pg18_ft_1.ashx/?w=620&h=413&crop=1&hash=73721A8D15FA4076B3289D5F16ED095A66477A4C" alt="Food Tray" >
+                  <img class="img-fluid thumbnail center-block" src="https://www.thestar.com.my/~/media/online/2015/09/30/21/21/metd_prkenny_0110_pg18_ft_1.ashx/?w=620&h=413&crop=1&hash=73721A8D15FA4076B3289D5F16ED095A66477A4C" alt="Food Tray Life" >
                 </div>
                 <div class="col-sm-6">
                   <h3 class=""><strong>Highest Bidder:</strong> <span id="highest-bidder"></span></h3>
