--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -250,12 +250,12 @@ font-size: 20px!important;
             </div>
             </a>
 
-            <a href="#" class="card-block clearfix">
+            <a href="https://cmiller8421.github.io/portfolio/giftastic/index.html" class="card-block clearfix">
             <div class="col-sm-6">       
                 <div class="card" style="width:250px">
-                 <img class="card-img-top" src="assets/images/infowidget.jpg" alt="Card image cap">
+                 <img class="card-img-top" src="assets/images/giphy.gif" alt="Card image cap">
                     <div class="card-body">
-                       <p class="card-text">Info Widget</p>
+                       <p class="card-text">GifTastic</p>
                     </div>
                </div>
             </div>
