--- a/project1/elementsHidden.html
+++ b/project1/elementsHidden.html
@@ -60,7 +60,7 @@
 				  
 
 
-  <div class="hidde" id="hiddenElements">
+  <div class="hidden" id="hiddenElements">
 
 
 					  <div class="row">                    
