--- a/project1/index.html
+++ b/project1/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Dog Finder</title>
+	<title>Under One Woof | Home</title>
     <!-- FavIcon -->
 	<link rel="icon" type="image/png" href="assets/branding/under-one-woof-logo_favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,17 +14,18 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- jQuery CDN -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 </head>
 
-<body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body onload="initialize()">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<a class="navbar-brand" href="index.html">
 			<img src="assets/branding/under-one-woof-logo_logoBar5-light.png" width="200">
 		</a>
 
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-		 aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
@@ -39,9 +40,8 @@
 					<a class="nav-link" href="petsinfo.html">Dog FAQs</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="resources.html">Helpful Resources</a>
+					<a class="nav-link" href="resources.html">Community Resources</a>
 				</li>
-
 			</ul>
 		</div>
 	</nav>
@@ -55,53 +55,63 @@
 			</div>
 		</div>
 	</div>
-
+    <!-- Main content area -->
 	<div class="container">
-
-
 		<div class="row">
-			<div class="col-sm-12 text-center" id="searchBar">
+			<div class="col-md-7" id="mapSpace">
+				<h5 id="mapDescriptor">Search for Available dogs near your zip code!</h5>
+			</div>
+			<div class="col-md-5 text-center" id="searchBar">
 				<form>
 					<div class="form-group">
-						<input type="text" class="form-control" id="zip" placeholder="Find a dog to adopt!">
-						<button type="button" class="btn btn-info" id="submitBtn">Find Dogs!</button>
+							<div id="zip-error">Please Enter a Valid Zip Code</div>
+							<input type="number" class="form-control" id="address" placeholder="Enter a zip code!" required>
+						<button type="button" class="btn btn-info" id="submitBtn"onclick="codeAddress()">Find Dogs!</button>
 					</div>
 				</form>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-12 card-columns" id="cardSpace"></div>
+			<div class="col-md-7" id="mapHidden">
+				<div id="map"></div>
+			</div>
+			<div class="col-md-5" id="cardHidden">
+				<div>
+					<div class="card-body" id="cardSpace"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- <div class="container">
+		<div class="row">
+			<div class="col-md-12 card-columns" id="cardSpace"></div>
 		</div>
 		<div class="row">
-			<div class="col-sm-12" id="mapSpace">
+			<div class="col-md-12" id="mapSpace">
 				<div id="map"></div>
 			</div>
 		</div>
-	</div>	
+	</div>	 -->
+	<!-- End main content area -->
+	<nav class="navbar justify-content-center navbar-dark bg-dark footer">
+		<p class="navbar-brand" id="copyright">
+			<p>Built by:</p>
+			<p><a class = "author" href="https://github.com/BFRaven" target="_blank"> Karen Beltran Lopez,</a></p>
+			<p><a class = "author" href="https://github.com/nbrasaemle" target="_blank">Nicole Brasaemle,</a></p>
+			<p><a class = "author" href="https://github.com/Cmiller8421" target="_blank">Corey Miller</a></p>
+			<p>and</p>
+			<p><a class = "author" href="https://github.com/djsteinmetz" target="_blank">DJ Steinmetz</a>&nbsp;|&nbsp;&copy; 2018 Powered by <a class = "author" href="https://www.petfinder.com/">Petfinder</a></p>
+		</p>
+	</nav>
 
-		<nav class="navbar justify-content-center navbar-dark bg-dark footer">
-			<a class="navbar-brand ftr" id="copyright"> Built by
-				<a href="https://github.com/BFRaven" target="_blank"> Karen Beltran</a>,
-				<a href="https://github.com/nbrasaemle" target="_blank">Nicole Brasaemle</a>,
-				<a href="https://github.com/Cmiller8421" target="_blank">Corey Miller</a>, and 
-				<a href="https://github.com/djsteinmetz" target="_blank">  DJ Steinmetz</a> Copyright &copy; 2018 Powered by Petfinder</p>
-			</a>
-		</nav>
+	<!--jQuery and eventual firebase links-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWROZUo7K5pSAulbxMPqG9RUFa2LtA9lc"></script>
 
-
-		<!--jQuery and eventual firebase links-->
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-		 crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-		 crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-		 crossorigin="anonymous"></script>
-		 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWROZUo7K5pSAulbxMPqG9RUFa2LtA9lc&callback=initMap">
-   		</script>
-
-		<!--Linking Javascript file-->
-		<script src="assets/javascript/app.js"></script>
-		<script src="assets/javascript/mapScript.js"></script>
+	<!--Linking Javascript file-->
+	<script src="assets/javascript/app.js"></script>
+	<script src="assets/javascript/mapScript.js"></script>
 </body>
 
 </html>
