--- a/portfolio/bootportfolio.html
+++ b/portfolio/bootportfolio.html
@@ -185,12 +185,12 @@ font-size: 20px!important;
 <body>
     
 <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-expand navbar-light bg-light">
+    <nav class="navbar navbar-expand-xs navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">Corey Miller</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-expand-xs" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="bootindex.html">About <span class="sr-only">(current)</span></a>
