--- a/resume/index.html
+++ b/resume/index.html
@@ -230,7 +230,7 @@
         
           <div class="modal-content">
                 <div class="modal-body">
-                  <img src="img/underOneWoof.jpg" alt="Under One Woof Fullscreen" class="popupImage"  id="portfolio1">
+                  <img src="img/underOneWoof.jpg" alt="Under One Woof Fullscreen"  id="portfolio1">
                 </div>
                 <div class="modal-body">
                     <p>"An app designed to match prospective dog owners with adoptable dogs specific to their zip code as well as provide additional resources to the user in one convenient space.  Bootstrap/CSS was for front-end design. Firebase, Javascript, Ajax, Google Maps API, and Petfinder API was used for back-end and functionality."</p>
