--- a/resume/index.html
+++ b/resume/index.html
@@ -24,7 +24,7 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
     <style>
-        #portfolio1{
+        portfolio1{
                 height:100%;
                 width:100%;
         }
@@ -229,7 +229,7 @@
           <h2 class="mb-5">Some of my Work...</h2>
         
           <div class="modal-content">
-                <div class="modal-body">
+                <div class="modal-picture">
                   <img src="file:///C:/Users/cmill/OneDrive/Desktop/cmiller8421.github.io/resume/img/project1.jpg" alt="Under One Woof Fullscreen"  id="portfolio1">
                 </div>
                 <div class="modal-body">
