--- a/resume/index.html
+++ b/resume/index.html
@@ -24,7 +24,7 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
     <style>
-        portfolio1{
+        #portfolio1{
                 height:100%;
                 width:100%;
         }
@@ -230,7 +230,7 @@
         
           <div class="modal-content">
                 <div class="modal-picture">
-                  <img src="file:///C:/Users/cmill/OneDrive/Desktop/cmiller8421.github.io/resume/img/project1.jpg" alt="Under One Woof Fullscreen"  id="portfolio1">
+                  <img src="https://cmiller8421.github.io/project1/assets/branding/under-one-woof-logo_full-light.png" alt="Under One Woof Fullscreen"  id="portfolio1">
                 </div>
                 <div class="modal-body">
                     <p>"An app designed to match prospective dog owners with adoptable dogs specific to their zip code as well as provide additional resources to the user in one convenient space.  Bootstrap/CSS was for front-end design. Firebase, Javascript, Ajax, Google Maps API, and Petfinder API was used for back-end and functionality."</p>
