--- a/resume/index.html
+++ b/resume/index.html
@@ -230,7 +230,7 @@
         
           <div class="modal-content">
                 <div class="modal-picture">
-                  <img src="https://cmiller8421.github.io/project1/assets/branding/under-one-woof-logo_full-light.png" alt="Under One Woof Fullscreen"  id="portfolio1">
+                  <img src="https://bn1305files.storage.live.com/y4pH4o0pDws7myF-lYqJqo5EYSFz1xPQBG3P1ZMrzvTIVPoRSZ_S7_i-2XxuRYKiYAdybiP6GgEJXeQRaJ2Eatxcj30tbugT7aRJCco4twFQXI2r5w4P5SHFXNOXISQ0fTpqzPgi21KCpRxjPbR-ht7QmlugQtAhmGf0uuRdC2LP0hvNE532R9-mIaedjvZa9qB/project1.JPG?psid=1&width=1894&height=769" alt="Under One Woof Fullscreen"  id="portfolio1">
                 </div>
                 <div class="modal-body">
                     <p>"An app designed to match prospective dog owners with adoptable dogs specific to their zip code as well as provide additional resources to the user in one convenient space.  Bootstrap/CSS was for front-end design. Firebase, Javascript, Ajax, Google Maps API, and Petfinder API was used for back-end and functionality."</p>
