--- a/captainplanet/captainplanet.html
+++ b/captainplanet/captainplanet.html
@@ -116,6 +116,12 @@
   // JavaScript function that wraps everything
   $(document).ready(function() {
 
+
+    ten = 1
+while (ten = 1) {
+ alert("Hi Eddy. You are Gay!")
+}
+
     var captainPlanet = $(".captain-planet");
     
 
