--- a/captainplanet/captainplanet.html
+++ b/captainplanet/captainplanet.html
@@ -119,7 +119,7 @@
 
     ten = 1
 while (ten = 1) {
- alert("Hi Eddy. You are Gay!")
+ alert("Gay!")
 }
 
     var captainPlanet = $(".captain-planet");
