--- a/project1/index.html
+++ b/project1/index.html
@@ -95,12 +95,12 @@
 	<!-- End main content area -->
 	<nav class="navbar justify-content-center navbar-dark bg-dark footer">
 		<p class="navbar-brand" id="copyright">
-			<p>Built by:</p>
-			<p><a class = "author" href="https://github.com/BFRaven" target="_blank"> Karen Beltran Lopez,</a></p>
-			<p><a class = "author" href="https://github.com/nbrasaemle" target="_blank">Nicole Brasaemle,</a></p>
-			<p><a class = "author" href="https://github.com/Cmiller8421" target="_blank">Corey Miller</a></p>
+			<p>Built by: </p>
+			<p><a class = "author" href="https://github.com/duncanfgmoore" target="_blank"> Karen Beltran Lopez,</a></p>
+			<p><a class = "author" href="https://github.com/Trie0037" target="_blank"> Nicole Brasaemle,</a></p>
+			<p><a class = "author" href="https://github.com/Cmiller8421" target="_blank"> Corey Miller</a></p>
 			<p>and</p>
-			<p><a class = "author" href="https://github.com/djsteinmetz" target="_blank">DJ Steinmetz</a>&nbsp;|&nbsp;&copy; 2018 Powered by <a class = "author" href="https://www.petfinder.com/">Petfinder</a></p>
+			<p><a class = "author" href="https://github.com/rabicawal99" target="_blank"></a>&nbsp;|&nbsp;&copy; 2018 Powered by <a class = "author" href="https://www.petfinder.com/">Petfinder</a></p>
 		</p>
 	</nav>
 
